--- a/docker-compose.prometheus.yml
+++ b/docker-compose.prometheus.yml
@@ -72,7 +72,7 @@ services:
       - "--path.sysfs=/host/sys"
       - "--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)"
     volumes:
-      - /:/host:ro,rslave
+      - /:/host:ro
     ports:
       - "127.0.0.1:${NODE_EXPORTER_PORT:-9101}:9100"
     networks:
